# txline-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/txline/: Cargo.toml  LICENSE-MIT  README.md
crates/txline/examples/: devnet_free_tier.rs  devnet_scores_stream.rs  devnet_setup_user.rs  devnet_validate_fixture.rs  devnet_validate_odds.rs  devnet_validate_stat.rs  devnet_validate_stat_v2.rs
crates/txline/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  trading_lifecycle.rs
crates/txline/src/http/: fixtures.rs  mod.rs  models.rs  odds.rs  scores.rs
crates/txline/src/solana/: codec.rs  faucet.rs  idl.rs  mod.rs  pda.rs  purchase.rs  setup.rs  subscription.rs  trading.rs  transaction_safety.rs  validation.rs
crates/txline/src/stream/: mod.rs  odds.rs  scores.rs  sse.rs
crates/txline/src/validation/: legacy.rs  mod.rs  proof.rs  strategy.rs  v2.rs
crates/txline/tests/: activation.rs  pda.rs  proof_decode.rs  trading.rs  trading_lifecycle.rs  validation.rs
crates/txline/tests/fixtures/: README.md  generate_trading_golden.js  generate_validation_golden.js  trading_golden.devnet.json  validation_golden.devnet.json
docs/: architecture.md  devnet-first.md  devnet-idl-coverage.md  releasing.md  security.md  validation.md
examples/: devnet_free_tier.rs  devnet_scores_stream.rs  devnet_validate_stat.rs  devnet_validate_stat_v2.rs
go/: LICENSE-MIT  NOTES.md  README.md  go.mod  go.sum
go/tests/: public_api_test.go
go/txline/: auth.go  auth_config_rest_test.go  client.go  config.go  errors.go  fixtures.go  instructions.go  instructions_golden_test.go  models.go  odds.go  pda.go  proof.go  proof_validation_strategy_test.go  purchase.go  purchase_safety_test.go  scores.go  solana.go  sse.go  sse_test.go  strategy.go  test_helpers_test.go  trading_lifecycle.go  trading_lifecycle_test.go  transaction_safety.go  validation.go
python/: NOTES.md  README.md  pyproject.toml
python/src/txline/: __init__.py  auth.py  client.py  config.py  errors.py  fixtures.py  odds.py  purchase.py  scores.py  sse.py  trading_lifecycle.py
python/src/txline/solana/: __init__.py  instructions.py  pda.py  transaction_safety.py
python/src/txline/validation/: __init__.py  legacy.py  proof.py  strategy.py  v2.py
python/tests/: test_auth_config_rest_sse.py  test_purchase_safety.py  test_solana_golden.py  test_trading_lifecycle.py  test_validation.py
tests/: activation.rs  pda.rs  proof_decode.rs
typescript/: NOTES.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: auth.ts  client.ts  config.ts  errors.ts  (+2 more)
(+33 files in other folders)
