[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "txline"
version = "0.3.5"
description = "Devnet-first Python SDK for TxLINE REST, SSE, validation, and Solana instruction builders."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "TxLINE SDK contributors" }]
dependencies = [
  "cryptography>=42",
  "httpx>=0.27,<1",
]

[project.urls]
Repository = "https://github.com/Berektassuly/txline"
Issues = "https://github.com/Berektassuly/txline/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/txline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
