[package]
name = "txline"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
description = "Devnet-only Rust SDK for TxLINE."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Berektassuly/txline"
homepage = "https://github.com/Berektassuly/txline"
documentation = "https://docs.rs/txline"
readme = "README.md"
keywords = ["txline", "solana", "devnet", "sdk", "odds"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
publish = true

[lib]
name = "txline"
path = "src/lib.rs"

[features]
default = ["http", "stream", "solana", "validation", "devnet"]
http = []
stream = ["http"]
solana = []
validation = ["solana"]
devnet = []

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
solana-client = "4.1.0"
solana-sdk = "4.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"
wincode = "0.5.0"
